--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
      </div>
    </header>
    <main class="">
-    <div class="flex gap-6 w-full">
+    <div class="flex flex-col-reverse gap-6 w-full md:flex-row">
         <!--------- input---------------------->
-        <div class="w-3/5 md:w-9/12 ">
+        <div class="w-full md:w-9/12 ">
          <div class="card grid grid-cols-1 md:grid-cols-3 gap-6" id="card">
 
          </div>
         </div>
         <!---- output----------------->
-        <div class="w-2/5 md:w-3/12 relative">
-          <div class="card-item flex flex-col h-96 p-12 border-2 border-border-color rounded-xl fixed">
+        <div class="w-full md:w-3/12 relative mb-40 ">
+          <div class="w-[80%] mx-auto md:w-[19%] bg-blue-200 card-item flex flex-col h-44 md:h-96 p-12 border-2 border-border-color rounded-xl fixed top-[160px]">
               <h3 class="text-2xl font-semibold text-center underline mb-12">Area Calculation</h3> 
-              <p class="text-2xl text-center" id="p1"></p>
+              <p class="text-2xl text-center mb-12" id="p1"></p>
           </div>
         </div>
     </div>
