Some code revised

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             extend: {
               colors: {
                 "header-color": "rgba(16, 144, 216, 0.1)",
+                "header-color2": "rgba(16, 144, 210, 0.8)",
                 "border-color" : "rgba(17, 17, 17, 0.1)",
                 "btn-color" : "rgb(16, 144, 216)",
                 "para-text-color": "rgb(65, 65, 65)"
@@ -51,7 +52,7 @@
         </div>
         <!---- output----------------->
         <div class="w-full md:w-3/12 relative mb-40 ">
-          <div class="w-[80%] mx-auto md:w-[19%] bg-blue-200 card-item flex flex-col h-44 md:h-96 p-12 border-2 border-border-color rounded-xl fixed top-[160px]">
+          <div class="w-[80%] mx-auto md:w-[19%] bg-header-color2 card-item flex flex-col h-44 md:h-96 p-12 border-2 border-border-color rounded-xl fixed top-[160px] md:top-[200px]">
               <h3 class="text-2xl font-semibold text-center underline mb-12">Area Calculation</h3> 
               <p class="text-2xl text-center mb-12" id="p1"></p>
           </div>
